src/test/ui/parser/issue-30318.stderr
error[E0753]: expected outer doc comment
  --> $DIR/issue-30318.rs:3:1
   |
LL | //! Misplaced comment...
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items

error: aborting due to previous error

For more information about this error, try `rustc --explain E0753`.
